--- a/produit.html
+++ b/produit.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Orinoco est un site e-commerce, il existe plusieurs applications comme Oricam pour les appareils photo ou encore, Oribook pour les livres...">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300&display=swap" rel="stylesheet">
@@ -83,6 +85,7 @@
         <!--Section du produit-->
     </main>
 
+    <!--F O O T E R-->
     <footer class="bg-dark mt-5 shadow-sm">
         <div class="container">
             <div class="row">
@@ -101,6 +104,8 @@
             </div>
         </div>
     </footer>
+    <!--F O O T E R-->
+
     
     <!-- jQuery first, then Popper.js, Bootstrap JS, then hide alert -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
