--- a/produit.html
+++ b/produit.html
@@ -56,7 +56,7 @@
             <div class="row" id="displayDetail">
                 <div class="col">
                     <div class="card border border-info shadow mb-5 mt-5 pb-4">
-                        <img src="" alt="Appareil photo">
+                        <img src="data:," alt="Appareil photo">
                         <div class="card-body">
                             <h2 class="h3 card-title">Nom du produit</h2>
                             <p class="card-text lead"></p>
