--- a/panier.html
+++ b/panier.html
@@ -167,7 +167,7 @@
     
 
     <!--F O O T E R-->
-    <footer class="bg-dark mt-5 shadow-sm">
+    <footer class="bg-dark mt-5 shadow-sm pb-4">
         <div class="container">
             <div class="row">
                 <div class="col">
