--- a/produit.html
+++ b/produit.html
@@ -86,7 +86,7 @@
     </main>
 
     <!--F O O T E R-->
-    <footer class="bg-dark mt-5 shadow-sm">
+    <footer class="bg-dark mt-5 shadow-sm pb-4">
         <div class="container">
             <div class="row">
                 <div class="col">
